added Header component

--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -1,5 +1,10 @@
 {
-	"AboutPromoText": "Миссиябыз",
-	"AboutPromoTitle": "Кыргыз тилдүү программисттердин санын жана билимин арттырууга сапаттуу окуу материалдарын тартуулап салым кошуу",
-	"MainPromoTitle": "Программалоо негиздерин браузериңизден чыкпай үйрөнүңүз!"
+  "aboutUs": "Биз тууралуу",
+  "courses": "Курстар",
+  "AboutPromoText": "Миссиябыз",
+  "AboutPromoTitle": "Кыргыз тилдүү программисттердин санын жана билимин арттырууга сапаттуу окуу материалдарын тартуулап салым кошуу",
+  "MainPromoTitle": "Программалоо негиздерин браузериңизден чыкпай үйрөнүңүз!",
+  "resources": "Ресурстар",
+  "signIn": "Кирүү",
+  "start": "Баштадык!"
 }
