Added a promo section

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,3 +1,5 @@
 {
-	"promoText": "Learn the basics of programming without leaving your browser!"
+	"AboutPromoText": "Our mission",
+	"AboutPromoTitle": "",
+	"MainPromoTitle": ""
 }
