--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -1,3 +1,5 @@
 {
-	"promoText": "Программалоо негиздерин браузериңизден чыкпай үйрөнүңүз!"
+	"AboutPromoText": "Миссиябыз",
+	"AboutPromoTitle": "Кыргыз тилдүү программисттердин санын жана билимин арттырууга сапаттуу окуу материалдарын тартуулап салым кошуу",
+	"MainPromoTitle": "Программалоо негиздерин браузериңизден чыкпай үйрөнүңүз!"
 }
