--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -1,3 +1,5 @@
 {
-	"promoText": "Изучите основы программирования, не выходя из браузера!"
+	"AboutPromoText": "Наша миссия",
+	"AboutPromoTitle": "Кыргызскоязычные программисты готовы внести вклад в развитие знаний, увеличив количество и качество учебных материалов",
+	"MainPromoTitle": "Учиться основам программирования, не выходя из дома!"
 }
