Added Info and textSection components

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,5 +1,26 @@
 {
-	"AboutPromoText": "Our mission",
-	"AboutPromoTitle": "",
-	"MainPromoTitle": ""
+  "aboutUs": "",
+  "aboutPromoText": "Our mission",
+  "aboutPromoTitle": "",
+  "aboutPlatformText1": "",
+  "aboutPlatformText2": "",
+  "aboutPlatformTitle": "",
+  "courses": "",
+  "infoMainItemText1": "",
+  "infoMainItemText2": "",
+  "infoMainItemText3": "",
+  "infoMainItemText4": "",
+  "infoMainItemTitle1": "",
+  "infoMainItemTitle2": "",
+  "infoMainItemTitle3": "",
+  "infoMainItemTitle4": "",
+  "mainPromoTitle": "",
+  "resources": "",
+  "signIn": "",
+  "sponsorsPartnersText": "",
+  "sponsorsPartnersTitle": "",
+  "start": "",
+  "whatCodeText": "",
+  "whatCodeTitle": "",
+  "whySimple": ""
 }
