--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -1,10 +1,27 @@
 {
   "aboutUs": "Биз тууралуу",
+  "aboutPromoText": "Миссиябыз",
+  "aboutPromoTitle": "Кыргыз тилдүү программисттердин санын жана билимин арттырууга сапаттуу окуу материалдарын тартуулап салым кошуу",
+  "aboutPlatformText1": "<text1>Өзүм айти багытына кызыгып жүрүп, жогорку билимим англис тил мугалими болгонуна карабастан, 29 жашымда codecademy.com сайтынан Python тилин үйрөндүм. Окуганыма 2 жыл болгондо, 2014-жылы айлык маянасы жакшы болгон MegaCom компаниясындагы жумушуман кетип, программист кесибиндеги алгачкы кадамдарымды шилтедим.</text1><text2>Ал ортодо codecademy.com сайтындагы курстарды кыргызчалатуу долбоорун Чоробек Сааданбеков мырза менен 2013–2014 жж. ишке ашырдык. Бирок codecademy.com өзү стартап болгондуктан, өнүгүү багытын өзү чечкенге укуктуу да. Кыргызстандан колдонуучулар өтө аз деген шылтоо менен кыргыз тилин, кийин башка тилдерди дагы алып салып, бир гана англис тилинде окута башташкан.</text2>",
+  "aboutPlatformText2": "<text1>Бирөөдөн көз каранды болбой, өзүнчө иш алып баралы деп,2015-жылы ушул долбоорду түптөп койгон элем. Кол тийбегендиктен долбоор кароосуз калып, 2019-жылы пандемия учурунда бир ай бою 1 күндө 1 сааттан код жазуу челленжин жарыялап, курс куруучу кабинетин жасадым.</text1><text2>2022-жылы өзүм 4 жыл иштеген B12 компаниясында кыскартуулар болуп, жумушсуз калгандыктан, долбоорду кайрадан эрмектеп баштадым. Кесипкөй адамдарды тартып, долбоорду codecademy.com'дон кем эмес деңгээлге чыгарып, элге тартуулайын деген максат менен USG Alumni Small Grants конкурсуна катышып, жеңүүчүлөрдүн катарына кирдим.</text2>",
+  "aboutPlatformTitle": "Платформанын келип чыгышы",
   "courses": "Курстар",
-  "AboutPromoText": "Миссиябыз",
-  "AboutPromoTitle": "Кыргыз тилдүү программисттердин санын жана билимин арттырууга сапаттуу окуу материалдарын тартуулап салым кошуу",
-  "MainPromoTitle": "Программалоо негиздерин браузериңизден чыкпай үйрөнүңүз!",
+  "infoMainItemText1": "Бир гана браузери бар интернетке туташкан компьютер керек. Интернет-кафе же китепканадан деле кирип үйрөнө бериңиз!",
+  "infoMainItemText2": "Материал интерактивдүү редактор менен берилет. Жаңы алган билимиңизди ошол эле жерден практика менен бекемдей аласыз!",
+  "infoMainItemText3": "Курстар видео эмес, текст түрүндө берилет. Андыктан өткөн темалардан маалымат керек болгондо, 'ачкыч сөздөр' боюнча издөө мүмкүнчүлүгү сунушталат.",
+  "infoMainItemText4": "Ошондуктан платформабыз акы төлөнүүчү курстарга даярдык көрүүгө эң ыңгайлуу булак.",
+  "infoMainItemTitle1": "Кошумча программаларды орнотуу керек эмес",
+  "infoMainItemTitle2": "Интерактивдүү редактор",
+  "infoMainItemTitle3": "Оңой издөө",
+  "infoMainItemTitle4": "Акысыз курстар",
+  "mainPromoTitle": "Программалоо негиздерин браузериңизден чыкпай үйрөнүңүз!",
+  "onlyKyrgyzLanguage": "100% кыргыз тилинде 🇰🇬",
   "resources": "Ресурстар",
   "signIn": "Кирүү",
-  "start": "Баштадык!"
+  "sponsorPartnersText": "Бул маалыматтык баракча жарым-жартылай АКШ өкмөтү каржылаган Бүтүрүүчүлѳрдүн чакан гранттар программасынын каражатына даярдалган. Аталган Чакан гранттар программасы Кыргыз Республикасындагы АКШ Элчилиги тарабынан каржыланып, Американын эл аралык билим берүү кеңештери (АКСЕЛС) аркылуу ишке ашырылат. Бул жерде келтирилген сунуштар, корутундулар жана пикирлер авторлордун оюн гана билдирет жана Кыргыз Республикасы АКШ Элчилигинин же Американын эл аралык билим берүү кеңештеринин көз карашына дал келбеши мүмкүн.",
+  "sponsorsPartnersTitle": "Демөөрчүлөр жана өнөктөштөр",
+  "start": "Баштадык!",
+  "whatCodeText": "Kodjaz бул дүйнө жүзүндө популярдуу болгон тилдерди жана технологияларда браузерден чыкпастан үйрөнүү мүмкүнчүлүгүн тартуулаган билим берүү платформасы.",
+  "whatCodeTitle": "<kodjaz>Kodjaz</kodjaz> деген эмне?",
+  "whySimple": "Эмне үчүн ыңгайлуу?"
 }
