--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -1,5 +1,27 @@
 {
-	"AboutPromoText": "Наша миссия",
-	"AboutPromoTitle": "Кыргызскоязычные программисты готовы внести вклад в развитие знаний, увеличив количество и качество учебных материалов",
-	"MainPromoTitle": "Учиться основам программирования, не выходя из дома!"
+  "aboutUs": "О нас",
+  "aboutPromoText": "Наша миссия",
+  "aboutPromoTitle": "Кыргызскоязычные программисты готовы внести вклад в развитие знаний, увеличив количество и качество учебных материалов",
+  "aboutPlatformText1": "<text1>Я сам интересовался IТ и, несмотря на свое высшее образование преподавателя английского языка, в 29 лет выучил Python на codecademy.com. Когда я проучился 2 года, в 2014 году я уволился с высокооплачиваемой работы в MegaCom и сделал первые шаги программиста.</text1><text2>Параллельно работал над проектом кыргызизации курсов на сайте codecademy.com, который мы реализовали с г-ном Чоробеком Сааданбековым в 2013-2014 гг. Однако, поскольку codecademy.com — стартап, он вправе сам определять направление развития. Под предлогом того, что пользователей из Кыргызстана на кыргызском языке слишком мало они убрали его, а потом и другие языки убрали и начали преподавать только на английском языке.</text2>",
+  "aboutPlatformText2": "<text1>Чтобы не зависеть ни от кого, я начал работу над этим проектом в 2015 году. В 2019 году проект был заброшен из-за отсутствия внимания. Во время пандемии я объявил челлендж 1 час в день решать задачи по программированию в течение месяца и создал кабинет по созданию курсов.</text1><text2>В 2022 году я проработал в компании B12 4 года. В связи с увольнениями и безработицей я начал уделять время своему проекту. Чтобы привлечь профессионалов и вывести проект на уровень не ниже codecademy.com, я принял участие в конкурсе малых грантов выпускников USG с целью представить его людям и стал одним из победителей.</text2>",
+  "aboutPlatformTitle": "История создания проекта",
+  "courses": "Курсы",
+  "infoMainItemText1": "Все, что вам нужно, это подключенный к Интернету компьютер с браузером. Продолжайте учиться даже в интернет-кафе или библиотеке!",
+  "infoMainItemText2": "Материал снабжен интерактивным редактором. Практикуясь там, вы можете укрепить полученные новые знания.",
+  "infoMainItemText3": "Курсы предоставляются в текстовом формате, а не в видео. Поэтому, когда вам нужна информация из предыдущих тем, предлагается возможность поиска по «ключевым словам».",
+  "infoMainItemText4": "Вот почему наша платформа самый удобный источник для подготовки к платным курсам.",
+  "infoMainItemTitle1": "Нет необходимости устанавливать дополнительные программы",
+  "infoMainItemTitle2": "Интерактивный редактор",
+  "infoMainItemTitle3": "Удобный поиск",
+  "infoMainItemTitle4": "Бесплатные курсы",
+  "mainPromoTitle": "Учиться основам программирования, не выходя из дома!",
+  "onlyKyrgyzLanguage": "100% на кыргызском языке 🇰🇬",
+  "resources": "Ресурсы",
+  "signIn": "Вход",
+  "sponsorsPartnersText": "Этот информационный бюллетень был подготовлен частично при финансовой поддержке Программы малых грантов для выпускников правительства США. Программа малых грантов финансируется посольством США в Кыргызской Республике и реализуется через Американский совет по международному образованию (ACCELS). Рекомендации, выводы и мнения, представленные здесь, представляют собой только мнение авторов и могут не отражать точку зрения Посольства США в Кыргызской Республике или Американских советов по международному образованию.",
+  "sponsorsPartnersTitle": "Спонсоры и партнеры",
+  "start": "Стартуем!",
+  "whatCodeText": "Kodjaz — это образовательная платформа, которая предлагает возможность изучать самые популярные в мире языки и технологии, не выходя из браузера.",
+  "whatCodeTitle": "Что такое <kodjaz>Kodjaz</kodjaz>?",
+  "whySimple": "Почему с нами удобно?"
 }
