Implemented Founder Component

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -13,6 +13,8 @@
   "feedbacksRegion2": "",
   "feedbacksText2": "",
   "feedbacksTitle": "",
+  "fromFounderText": "",
+  "fromFounder": "",
   "infoMainItemText1": "",
   "infoMainItemText2": "",
   "infoMainItemText3": "",
