--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -13,6 +13,8 @@
   "feedbacksRegion2": "Жалалабат область, село Кош-Добо",
   "feedbacksText2": "До Kodjaz мы пробовали изучать программирование с помощью других онлайн-курсов. В Kodjaz уроки на кыргызском языке, поэтому учиться было легче. Я сам учился программированию вместе со своими учениками на курсах сельсовета. Если в будущем будут еще курсы, мы продолжим их изучать.",
   "feedbacksTitle": "Что о нас говорят",
+  "fromFounderText": "Я верю, что Kodjaz познакомит сыновей и дочерей нашего любимого Кыргызстана с написанием кода и даст им первый шаг в мир программирования.",
+  "fromFounder": "От основателя",
   "infoMainItemText1": "Все, что вам нужно, это подключенный к Интернету компьютер с браузером. Продолжайте учиться даже в интернет-кафе или библиотеке!",
   "infoMainItemText2": "Материал снабжен интерактивным редактором. Практикуясь там, вы можете укрепить полученные новые знания.",
   "infoMainItemText3": "Курсы предоставляются в текстовом формате, а не в видео. Поэтому, когда вам нужна информация из предыдущих тем, предлагается возможность поиска по «ключевым словам».",
