--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -13,6 +13,8 @@
   "feedbacksRegion2": "Жалалабат облусу, Кош-Дөбө айылы",
   "feedbacksText2": "Kodjaz'га чейин башка онлайн курстарды колдонуп, программалоону үйрөнгөнгө аракет кылып жүрдүк. Kodjaz'да сабактар кыргыз тилинде болгондуктан өздөштүрүү кыйла жеңил болду. Өзүм айыл өкмөттөгү курстарда окуучуларым менен кошо программалоону үйрөндүм. Келечекте дагы курстар чыкса, аларды дагы үйрөнүүнү улантабыз.",
   "feedbacksTitle": "Cын-пикирлер",
+  "fromFounderText": "Kodjaz  сүйүктүү Кыргызстаныбыздын уул-кыздарын код жазуу менен тааныштырып, аларга программалоо дүйнөсүнө алгачкы тепкич болот деп ишенем. ",
+  "fromFounder": "Уюштуруучудан",
   "infoMainItemText1": "Бир гана браузери бар интернетке туташкан компьютер керек. Интернет-кафе же китепканадан деле кирип үйрөнө бериңиз!",
   "infoMainItemText2": "Материал интерактивдүү редактор менен берилет. Жаңы алган билимиңизди ошол эле жерден практика менен бекемдей аласыз!",
   "infoMainItemText3": "Курстар видео эмес, текст түрүндө берилет. Андыктан өткөн темалардан маалымат керек болгондо, 'ачкыч сөздөр' боюнча издөө мүмкүнчүлүгү сунушталат.",
