Implemented Feedbacks component

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,6 +6,13 @@
   "aboutPlatformText2": "",
   "aboutPlatformTitle": "",
   "courses": "",
+  "feedbacksAuthor1": "",
+  "feedbacksRegion1": "",
+  "feedbacksText1": "",
+  "feedbacksAuthor2": "",
+  "feedbacksRegion2": "",
+  "feedbacksText2": "",
+  "feedbacksTitle": "",
   "infoMainItemText1": "",
   "infoMainItemText2": "",
   "infoMainItemText3": "",
