--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -6,6 +6,13 @@
   "aboutPlatformText2": "<text1>Бирөөдөн көз каранды болбой, өзүнчө иш алып баралы деп,2015-жылы ушул долбоорду түптөп койгон элем. Кол тийбегендиктен долбоор кароосуз калып, 2019-жылы пандемия учурунда бир ай бою 1 күндө 1 сааттан код жазуу челленжин жарыялап, курс куруучу кабинетин жасадым.</text1><text2>2022-жылы өзүм 4 жыл иштеген B12 компаниясында кыскартуулар болуп, жумушсуз калгандыктан, долбоорду кайрадан эрмектеп баштадым. Кесипкөй адамдарды тартып, долбоорду codecademy.com'дон кем эмес деңгээлге чыгарып, элге тартуулайын деген максат менен USG Alumni Small Grants конкурсуна катышып, жеңүүчүлөрдүн катарына кирдим.</text2>",
   "aboutPlatformTitle": "Платформанын келип чыгышы",
   "courses": "Курстар",
+  "feedbacksAuthor1": "Уланбек",
+  "feedbacksRegion1": "Баткен облусу, Лейлек айылы",
+  "feedbacksText1": "Kodjaz платформасын колдонуп Python тилинин негиздерин үйрөнүп алдым. Эми өз долбоорлорумду жазып, чыныгы жашоодо керек болгон чоң эмес программаларды жасай алам.  Буйруса, Kodjaz аркылуу, өз окуучуларымды окутуп, Баткен облусунда программисттердин санын көбөйтүүгө даярмын десем болот.",
+  "feedbacksAuthor2": "Эралы",
+  "feedbacksRegion2": "Жалалабат облусу, Кош-Дөбө айылы",
+  "feedbacksText2": "Kodjaz'га чейин башка онлайн курстарды колдонуп, программалоону үйрөнгөнгө аракет кылып жүрдүк. Kodjaz'да сабактар кыргыз тилинде болгондуктан өздөштүрүү кыйла жеңил болду. Өзүм айыл өкмөттөгү курстарда окуучуларым менен кошо программалоону үйрөндүм. Келечекте дагы курстар чыкса, аларды дагы үйрөнүүнү улантабыз.",
+  "feedbacksTitle": "Cын-пикирлер",
   "infoMainItemText1": "Бир гана браузери бар интернетке туташкан компьютер керек. Интернет-кафе же китепканадан деле кирип үйрөнө бериңиз!",
   "infoMainItemText2": "Материал интерактивдүү редактор менен берилет. Жаңы алган билимиңизди ошол эле жерден практика менен бекемдей аласыз!",
   "infoMainItemText3": "Курстар видео эмес, текст түрүндө берилет. Андыктан өткөн темалардан маалымат керек болгондо, 'ачкыч сөздөр' боюнча издөө мүмкүнчүлүгү сунушталат.",
