--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -6,6 +6,13 @@
   "aboutPlatformText2": "<text1>Чтобы не зависеть ни от кого, я начал работу над этим проектом в 2015 году. В 2019 году проект был заброшен из-за отсутствия внимания. Во время пандемии я объявил челлендж 1 час в день решать задачи по программированию в течение месяца и создал кабинет по созданию курсов.</text1><text2>В 2022 году я проработал в компании B12 4 года. В связи с увольнениями и безработицей я начал уделять время своему проекту. Чтобы привлечь профессионалов и вывести проект на уровень не ниже codecademy.com, я принял участие в конкурсе малых грантов выпускников USG с целью представить его людям и стал одним из победителей.</text2>",
   "aboutPlatformTitle": "История создания проекта",
   "courses": "Курсы",
+  "feedbacksAuthor1": "Уланбек",
+  "feedbacksRegion1": "Баткен область, село Лейлек",
+  "feedbacksText1": "Используя платформу Kodjaz, я изучил основы программирования на языке Python. Теперь я пишу собственные проекты, могу реализовать небольшие реальные проекты. Я могу сказать, Дай Бог, что с помощью Kodjaz я могу обучать своих учеников, увеличивая количество программистов в Баткенской области.",
+  "feedbacksAuthor2": "Эралы",
+  "feedbacksRegion2": "Жалалабат область, село Кош-Добо",
+  "feedbacksText2": "До Kodjaz мы пробовали изучать программирование с помощью других онлайн-курсов. В Kodjaz уроки на кыргызском языке, поэтому учиться было легче. Я сам учился программированию вместе со своими учениками на курсах сельсовета. Если в будущем будут еще курсы, мы продолжим их изучать.",
+  "feedbacksTitle": "Что о нас говорят",
   "infoMainItemText1": "Все, что вам нужно, это подключенный к Интернету компьютер с браузером. Продолжайте учиться даже в интернет-кафе или библиотеке!",
   "infoMainItemText2": "Материал снабжен интерактивным редактором. Практикуясь там, вы можете укрепить полученные новые знания.",
   "infoMainItemText3": "Курсы предоставляются в текстовом формате, а не в видео. Поэтому, когда вам нужна информация из предыдущих тем, предлагается возможность поиска по «ключевым словам».",
