Added About page with command component

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,10 +1,12 @@
 {
+  "aboutCommand": "",
   "aboutUs": "",
   "aboutPromoText": "Our mission",
   "aboutPromoTitle": "",
   "aboutPlatformText1": "",
   "aboutPlatformText2": "",
   "aboutPlatformTitle": "",
+  "commandCareerMurat": "",
   "courses": "",
   "feedbacksAuthor1": "",
   "feedbacksRegion1": "",
