--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -1,10 +1,12 @@
 {
+  "aboutCommand": "Тайпа тууралуу",
   "aboutUs": "Биз тууралуу",
   "aboutPromoText": "Миссиябыз",
   "aboutPromoTitle": "Кыргыз тилдүү программисттердин санын жана билимин арттырууга сапаттуу окуу материалдарын тартуулап салым кошуу",
   "aboutPlatformText1": "<text1>Өзүм айти багытына кызыгып жүрүп, жогорку билимим англис тил мугалими болгонуна карабастан, 29 жашымда codecademy.com сайтынан Python тилин үйрөндүм. Окуганыма 2 жыл болгондо, 2014-жылы айлык маянасы жакшы болгон MegaCom компаниясындагы жумушуман кетип, программист кесибиндеги алгачкы кадамдарымды шилтедим.</text1><text2>Ал ортодо codecademy.com сайтындагы курстарды кыргызчалатуу долбоорун Чоробек Сааданбеков мырза менен 2013–2014 жж. ишке ашырдык. Бирок codecademy.com өзү стартап болгондуктан, өнүгүү багытын өзү чечкенге укуктуу да. Кыргызстандан колдонуучулар өтө аз деген шылтоо менен кыргыз тилин, кийин башка тилдерди дагы алып салып, бир гана англис тилинде окута башташкан.</text2>",
   "aboutPlatformText2": "<text1>Бирөөдөн көз каранды болбой, өзүнчө иш алып баралы деп,2015-жылы ушул долбоорду түптөп койгон элем. Кол тийбегендиктен долбоор кароосуз калып, 2019-жылы пандемия учурунда бир ай бою 1 күндө 1 сааттан код жазуу челленжин жарыялап, курс куруучу кабинетин жасадым.</text1><text2>2022-жылы өзүм 4 жыл иштеген B12 компаниясында кыскартуулар болуп, жумушсуз калгандыктан, долбоорду кайрадан эрмектеп баштадым. Кесипкөй адамдарды тартып, долбоорду codecademy.com'дон кем эмес деңгээлге чыгарып, элге тартуулайын деген максат менен USG Alumni Small Grants конкурсуна катышып, жеңүүчүлөрдүн катарына кирдим.</text2>",
   "aboutPlatformTitle": "Платформанын келип чыгышы",
+  "commandCareerMurat": "Долбоордун түптөөчүсү",
   "courses": "Курстар",
   "feedbacksAuthor1": "Уланбек",
   "feedbacksRegion1": "Баткен облусу, Лейлек айылы",
