--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -1,10 +1,12 @@
 {
+  "aboutCommand": "Команда",
   "aboutUs": "О нас",
   "aboutPromoText": "Наша миссия",
   "aboutPromoTitle": "Кыргызскоязычные программисты готовы внести вклад в развитие знаний, увеличив количество и качество учебных материалов",
   "aboutPlatformText1": "<text1>Я сам интересовался IТ и, несмотря на свое высшее образование преподавателя английского языка, в 29 лет выучил Python на codecademy.com. Когда я проучился 2 года, в 2014 году я уволился с высокооплачиваемой работы в MegaCom и сделал первые шаги программиста.</text1><text2>Параллельно работал над проектом кыргызизации курсов на сайте codecademy.com, который мы реализовали с г-ном Чоробеком Сааданбековым в 2013-2014 гг. Однако, поскольку codecademy.com — стартап, он вправе сам определять направление развития. Под предлогом того, что пользователей из Кыргызстана на кыргызском языке слишком мало они убрали его, а потом и другие языки убрали и начали преподавать только на английском языке.</text2>",
   "aboutPlatformText2": "<text1>Чтобы не зависеть ни от кого, я начал работу над этим проектом в 2015 году. В 2019 году проект был заброшен из-за отсутствия внимания. Во время пандемии я объявил челлендж 1 час в день решать задачи по программированию в течение месяца и создал кабинет по созданию курсов.</text1><text2>В 2022 году я проработал в компании B12 4 года. В связи с увольнениями и безработицей я начал уделять время своему проекту. Чтобы привлечь профессионалов и вывести проект на уровень не ниже codecademy.com, я принял участие в конкурсе малых грантов выпускников USG с целью представить его людям и стал одним из победителей.</text2>",
   "aboutPlatformTitle": "История создания проекта",
+  "commandCareerMurat": "Основатель проекта",
   "courses": "Курсы",
   "feedbacksAuthor1": "Уланбек",
   "feedbacksRegion1": "Баткен область, село Лейлек",
