Added Courses component

--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -8,6 +8,8 @@
   "aboutPlatformTitle": "Платформанын келип чыгышы",
   "commandCareerMurat": "Долбоордун түптөөчүсү",
   "courses": "Курстар",
+  "coursesDescription": "Курстар 100% кыргызча жазылган",
+  "easy": "Оңой",
   "feedbacksAuthor1": "Уланбек",
   "feedbacksRegion1": "Баткен облусу, Лейлек айылы",
   "feedbacksText1": "Kodjaz платформасын колдонуп Python тилинин негиздерин үйрөнүп алдым. Эми өз долбоорлорумду жазып, чыныгы жашоодо керек болгон чоң эмес программаларды жасай алам.  Буйруса, Kodjaz аркылуу, өз окуучуларымды окутуп, Баткен облусунда программисттердин санын көбөйтүүгө даярмын десем болот.",
@@ -26,12 +28,14 @@
   "infoMainItemTitle3": "Оңой издөө",
   "infoMainItemTitle4": "Акысыз курстар",
   "mainPromoTitle": "Программалоо негиздерин браузериңизден чыкпай үйрөнүңүз!",
+  "lesson": "Сабак",
   "onlyKyrgyzLanguage": "100% кыргыз тилинде 🇰🇬",
   "resources": "Ресурстар",
   "signIn": "Кирүү",
   "sponsorPartnersText": "Бул маалыматтык баракча жарым-жартылай АКШ өкмөтү каржылаган Бүтүрүүчүлѳрдүн чакан гранттар программасынын каражатына даярдалган. Аталган Чакан гранттар программасы Кыргыз Республикасындагы АКШ Элчилиги тарабынан каржыланып, Американын эл аралык билим берүү кеңештери (АКСЕЛС) аркылуу ишке ашырылат. Бул жерде келтирилген сунуштар, корутундулар жана пикирлер авторлордун оюн гана билдирет жана Кыргыз Республикасы АКШ Элчилигинин же Американын эл аралык билим берүү кеңештеринин көз карашына дал келбеши мүмкүн.",
   "sponsorsPartnersTitle": "Демөөрчүлөр жана өнөктөштөр",
   "start": "Баштадык!",
+  "soon": "Жакында",
   "whatCodeText": "Kodjaz бул дүйнө жүзүндө популярдуу болгон тилдерди жана технологияларда браузерден чыкпастан үйрөнүү мүмкүнчүлүгүн тартуулаган билим берүү платформасы.",
   "whatCodeTitle": "<kodjaz>Kodjaz</kodjaz> деген эмне?",
   "whySimple": "Эмне үчүн ыңгайлуу?"
