--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -8,6 +8,7 @@
   "aboutPlatformTitle": "История создания проекта",
   "commandCareerMurat": "Основатель проекта",
   "courses": "Курсы",
+  "coursesDescription": "Курсы написаны 100% на кыргызском языке",
   "feedbacksAuthor1": "Уланбек",
   "feedbacksRegion1": "Баткен область, село Лейлек",
   "feedbacksText1": "Используя платформу Kodjaz, я изучил основы программирования на языке Python. Теперь я пишу собственные проекты, могу реализовать небольшие реальные проекты. Я могу сказать, Дай Бог, что с помощью Kodjaz я могу обучать своих учеников, увеличивая количество программистов в Баткенской области.",
