Added Resources and Courses

--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -28,9 +28,10 @@
   "infoMainItemTitle3": "Оңой издөө",
   "infoMainItemTitle4": "Акысыз курстар",
   "mainPromoTitle": "Программалоо негиздерин браузериңизден чыкпай үйрөнүңүз!",
-  "lesson": "Сабак",
+  "lesson": "сабак",
   "onlyKyrgyzLanguage": "100% кыргыз тилинде 🇰🇬",
   "resources": "Ресурстар",
+  "resoursesDescription": "Бул жерде жакын арада пайдалуу ресурстарга шилтемелер болот",
   "signIn": "Кирүү",
   "sponsorPartnersText": "Бул маалыматтык баракча жарым-жартылай АКШ өкмөтү каржылаган Бүтүрүүчүлѳрдүн чакан гранттар программасынын каражатына даярдалган. Аталган Чакан гранттар программасы Кыргыз Республикасындагы АКШ Элчилиги тарабынан каржыланып, Американын эл аралык билим берүү кеңештери (АКСЕЛС) аркылуу ишке ашырылат. Бул жерде келтирилген сунуштар, корутундулар жана пикирлер авторлордун оюн гана билдирет жана Кыргыз Республикасы АКШ Элчилигинин же Американын эл аралык билим берүү кеңештеринин көз карашына дал келбеши мүмкүн.",
   "sponsorsPartnersTitle": "Демөөрчүлөр жана өнөктөштөр",
