Implemented login api and UI

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -7,7 +7,9 @@
   "aboutPlatformText2": "",
   "aboutPlatformTitle": "",
   "commandCareerMurat": "",
+  "cookiePolicy": "Cookie policy",
   "courses": "",
+  "enter": "",
   "feedbacksAuthor1": "",
   "feedbacksRegion1": "",
   "feedbacksText1": "",
@@ -15,6 +17,7 @@
   "feedbacksRegion2": "",
   "feedbacksText2": "",
   "feedbacksTitle": "",
+  "forgotPassword": "",
   "fromFounderText": "",
   "fromFounder": "",
   "infoMainItemText1": "",
@@ -26,6 +29,10 @@
   "infoMainItemTitle3": "",
   "infoMainItemTitle4": "",
   "mainPromoTitle": "",
+  "noAccountSignUp": "",
+  "onlyKyrgyzLanguage": "",
+  "password": "",
+  "privacyPolicy": "Privacy policy",
   "resources": "",
   "signIn": "",
   "sponsorsPartnersText": "",
@@ -33,5 +40,6 @@
   "start": "",
   "whatCodeText": "",
   "whatCodeTitle": "",
+  "withSocialMedias": "",
   "whySimple": ""
 }
