--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -7,8 +7,10 @@
   "aboutPlatformText2": "<text1>Чтобы не зависеть ни от кого, я начал работу над этим проектом в 2015 году. В 2019 году проект был заброшен из-за отсутствия внимания. Во время пандемии я объявил челлендж 1 час в день решать задачи по программированию в течение месяца и создал кабинет по созданию курсов.</text1><text2>В 2022 году я проработал в компании B12 4 года. В связи с увольнениями и безработицей я начал уделять время своему проекту. Чтобы привлечь профессионалов и вывести проект на уровень не ниже codecademy.com, я принял участие в конкурсе малых грантов выпускников USG с целью представить его людям и стал одним из победителей.</text2>",
   "aboutPlatformTitle": "История создания проекта",
   "commandCareerMurat": "Основатель проекта",
+  "cookiePolicy": "Политика в отношении файлов cookie",
   "courses": "Курсы",
   "coursesDescription": "Курсы написаны 100% на кыргызском языке",
+  "enter": "Вход",
   "feedbacksAuthor1": "Уланбек",
   "feedbacksRegion1": "Баткен область, село Лейлек",
   "feedbacksText1": "Используя платформу Kodjaz, я изучил основы программирования на языке Python. Теперь я пишу собственные проекты, могу реализовать небольшие реальные проекты. Я могу сказать, Дай Бог, что с помощью Kodjaz я могу обучать своих учеников, увеличивая количество программистов в Баткенской области.",
@@ -16,6 +18,7 @@
   "feedbacksRegion2": "Жалалабат область, село Кош-Добо",
   "feedbacksText2": "До Kodjaz мы пробовали изучать программирование с помощью других онлайн-курсов. В Kodjaz уроки на кыргызском языке, поэтому учиться было легче. Я сам учился программированию вместе со своими учениками на курсах сельсовета. Если в будущем будут еще курсы, мы продолжим их изучать.",
   "feedbacksTitle": "Что о нас говорят",
+  "forgotPassword": "Забыли пароль?",
   "fromFounderText": "Я верю, что Kodjaz познакомит сыновей и дочерей нашего любимого Кыргызстана с написанием кода и даст им первый шаг в мир программирования.",
   "fromFounder": "От основателя",
   "infoMainItemText1": "Все, что вам нужно, это подключенный к Интернету компьютер с браузером. Продолжайте учиться даже в интернет-кафе или библиотеке!",
@@ -27,7 +30,10 @@
   "infoMainItemTitle3": "Удобный поиск",
   "infoMainItemTitle4": "Бесплатные курсы",
   "mainPromoTitle": "Учиться основам программирования, не выходя из дома!",
+  "noAccountSignUp": "Нет аккаунта? <textPrimary>Зарегистрируйтесь</textPrimary>",
   "onlyKyrgyzLanguage": "100% на кыргызском языке 🇰🇬",
+  "password": "Пароль",
+  "privacyPolicy": "Политика конфиденциальности",
   "resources": "Ресурсы",
   "signIn": "Вход",
   "sponsorsPartnersText": "Этот информационный бюллетень был подготовлен частично при финансовой поддержке Программы малых грантов для выпускников правительства США. Программа малых грантов финансируется посольством США в Кыргызской Республике и реализуется через Американский совет по международному образованию (ACCELS). Рекомендации, выводы и мнения, представленные здесь, представляют собой только мнение авторов и могут не отражать точку зрения Посольства США в Кыргызской Республике или Американских советов по международному образованию.",
@@ -35,5 +41,6 @@
   "start": "Стартуем!",
   "whatCodeText": "Kodjaz — это образовательная платформа, которая предлагает возможность изучать самые популярные в мире языки и технологии, не выходя из браузера.",
   "whatCodeTitle": "Что такое <kodjaz>Kodjaz</kodjaz>?",
+  "withSocialMedias": "Войти через социальные сети:",
   "whySimple": "Почему с нами удобно?"
 }
