Added login, signin functions and layout component

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,6 +6,7 @@
   "aboutPlatformText1": "",
   "aboutPlatformText2": "",
   "aboutPlatformTitle": "",
+  "agreePrivacy": "",
   "commandCareerMurat": "",
   "cookiePolicy": "Cookie policy",
   "courses": "",
@@ -28,12 +29,14 @@
   "infoMainItemTitle2": "",
   "infoMainItemTitle3": "",
   "infoMainItemTitle4": "",
+  "kodjazTitle": "",
   "mainPromoTitle": "",
   "noAccountSignUp": "",
   "onlyKyrgyzLanguage": "",
   "password": "",
   "privacyPolicy": "Privacy policy",
   "resources": "",
+  "logIn": "",
   "signIn": "",
   "sponsorsPartnersText": "",
   "sponsorsPartnersTitle": "",
