24 authentification jwt token (#29)
* Implemented login api, register api, UI and layout component 

Co-authored-by: Janara Tolonbaeva <janara@mancho.dev>

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,8 +6,11 @@
   "aboutPlatformText1": "",
   "aboutPlatformText2": "",
   "aboutPlatformTitle": "",
+  "agreePrivacy": "",
   "commandCareerMurat": "",
+  "cookiePolicy": "Cookie policy",
   "courses": "",
+  "enter": "",
   "feedbacksAuthor1": "",
   "feedbacksRegion1": "",
   "feedbacksText1": "",
@@ -15,6 +18,7 @@
   "feedbacksRegion2": "",
   "feedbacksText2": "",
   "feedbacksTitle": "",
+  "forgotPassword": "",
   "fromFounderText": "",
   "fromFounder": "",
   "infoMainItemText1": "",
@@ -25,13 +29,20 @@
   "infoMainItemTitle2": "",
   "infoMainItemTitle3": "",
   "infoMainItemTitle4": "",
+  "kodjazTitle": "",
   "mainPromoTitle": "",
+  "noAccountSignUp": "",
+  "onlyKyrgyzLanguage": "",
+  "password": "",
+  "privacyPolicy": "Privacy policy",
   "resources": "",
+  "logIn": "",
   "signIn": "",
   "sponsorsPartnersText": "",
   "sponsorsPartnersTitle": "",
   "start": "",
   "whatCodeText": "",
   "whatCodeTitle": "",
+  "withSocialMedias": "",
   "whySimple": ""
 }
