--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -6,10 +6,13 @@
   "aboutPlatformText1": "<text1>Өзүм айти багытына кызыгып жүрүп, жогорку билимим англис тил мугалими болгонуна карабастан, 29 жашымда codecademy.com сайтынан Python тилин үйрөндүм. Окуганыма 2 жыл болгондо, 2014-жылы айлык маянасы жакшы болгон MegaCom компаниясындагы жумушуман кетип, программист кесибиндеги алгачкы кадамдарымды шилтедим.</text1><text2>Ал ортодо codecademy.com сайтындагы курстарды кыргызчалатуу долбоорун Чоробек Сааданбеков мырза менен 2013–2014 жж. ишке ашырдык. Бирок codecademy.com өзү стартап болгондуктан, өнүгүү багытын өзү чечкенге укуктуу да. Кыргызстандан колдонуучулар өтө аз деген шылтоо менен кыргыз тилин, кийин башка тилдерди дагы алып салып, бир гана англис тилинде окута башташкан.</text2>",
   "aboutPlatformText2": "<text1>Бирөөдөн көз каранды болбой, өзүнчө иш алып баралы деп,2015-жылы ушул долбоорду түптөп койгон элем. Кол тийбегендиктен долбоор кароосуз калып, 2019-жылы пандемия учурунда бир ай бою 1 күндө 1 сааттан код жазуу челленжин жарыялап, курс куруучу кабинетин жасадым.</text1><text2>2022-жылы өзүм 4 жыл иштеген B12 компаниясында кыскартуулар болуп, жумушсуз калгандыктан, долбоорду кайрадан эрмектеп баштадым. Кесипкөй адамдарды тартып, долбоорду codecademy.com'дон кем эмес деңгээлге чыгарып, элге тартуулайын деген максат менен USG Alumni Small Grants конкурсуна катышып, жеңүүчүлөрдүн катарына кирдим.</text2>",
   "aboutPlatformTitle": "Платформанын келип чыгышы",
+  "agreePrivacy": "Катталуу менен мен Kodjaz'дын <textLink>Кызмат көрсөтүү саясаты</textLink> жана <textLink>Купуялык саясаты</textLink> менен макулмун деп белгилейм.",
   "commandCareerMurat": "Долбоордун түптөөчүсү",
+  "cookiePolicy": "Куки саясаты",
   "courses": "Курстар",
   "coursesDescription": "Курстар 100% кыргызча жазылган",
   "easy": "Оңой",
+  "enter": "Кирүү",
   "feedbacksAuthor1": "Уланбек",
   "feedbacksRegion1": "Баткен облусу, Лейлек айылы",
   "feedbacksText1": "Kodjaz платформасын колдонуп Python тилинин негиздерин үйрөнүп алдым. Эми өз долбоорлорумду жазып, чыныгы жашоодо керек болгон чоң эмес программаларды жасай алам.  Буйруса, Kodjaz аркылуу, өз окуучуларымды окутуп, Баткен облусунда программисттердин санын көбөйтүүгө даярмын десем болот.",
@@ -17,6 +20,7 @@
   "feedbacksRegion2": "Жалалабат облусу, Кош-Дөбө айылы",
   "feedbacksText2": "Kodjaz'га чейин башка онлайн курстарды колдонуп, программалоону үйрөнгөнгө аракет кылып жүрдүк. Kodjaz'да сабактар кыргыз тилинде болгондуктан өздөштүрүү кыйла жеңил болду. Өзүм айыл өкмөттөгү курстарда окуучуларым менен кошо программалоону үйрөндүм. Келечекте дагы курстар чыкса, аларды дагы үйрөнүүнү улантабыз.",
   "feedbacksTitle": "Cын-пикирлер",
+  "forgotPassword": "Сырсөзүңүздү унуттуңузбу?",
   "fromFounderText": "Kodjaz  сүйүктүү Кыргызстаныбыздын уул-кыздарын код жазуу менен тааныштырып, аларга программалоо дүйнөсүнө алгачкы тепкич болот деп ишенем. ",
   "fromFounder": "Уюштуруучудан",
   "infoMainItemText1": "Бир гана браузери бар интернетке туташкан компьютер керек. Интернет-кафе же китепканадан деле кирип үйрөнө бериңиз!",
@@ -27,17 +31,23 @@
   "infoMainItemTitle2": "Интерактивдүү редактор",
   "infoMainItemTitle3": "Оңой издөө",
   "infoMainItemTitle4": "Акысыз курстар",
+  "kodjazTitle": "Kodjaz - программалоо негиздер боюнча акысыз курстар",
   "mainPromoTitle": "Программалоо негиздерин браузериңизден чыкпай үйрөнүңүз!",
   "lesson": "сабак",
+  "noAccountSignUp": "Аккаунтуңуз жокпу? <textPrimary>Жазылыңыз</textPrimary>",
   "onlyKyrgyzLanguage": "100% кыргыз тилинде 🇰🇬",
+  "password": "Сырсөз",
+  "privacyPolicy": "Купуялык саясат",
   "resources": "Ресурстар",
   "resoursesDescription": "Бул жерде жакын арада пайдалуу ресурстарга шилтемелер болот",
-  "signIn": "Кирүү",
+  "logIn": "Кирүү",
+  "signIn": "Аккаунт түзүү",
   "sponsorPartnersText": "Бул маалыматтык баракча жарым-жартылай АКШ өкмөтү каржылаган Бүтүрүүчүлѳрдүн чакан гранттар программасынын каражатына даярдалган. Аталган Чакан гранттар программасы Кыргыз Республикасындагы АКШ Элчилиги тарабынан каржыланып, Американын эл аралык билим берүү кеңештери (АКСЕЛС) аркылуу ишке ашырылат. Бул жерде келтирилген сунуштар, корутундулар жана пикирлер авторлордун оюн гана билдирет жана Кыргыз Республикасы АКШ Элчилигинин же Американын эл аралык билим берүү кеңештеринин көз карашына дал келбеши мүмкүн.",
   "sponsorsPartnersTitle": "Демөөрчүлөр жана өнөктөштөр",
   "start": "Баштадык!",
   "soon": "Жакында",
   "whatCodeText": "Kodjaz бул дүйнө жүзүндө популярдуу болгон тилдерди жана технологияларда браузерден чыкпастан үйрөнүү мүмкүнчүлүгүн тартуулаган билим берүү платформасы.",
   "whatCodeTitle": "<kodjaz>Kodjaz</kodjaz> деген эмне?",
+  "withSocialMedias": "Соцтармактар аркулуу киирүү:",
   "whySimple": "Эмне үчүн ыңгайлуу?"
 }
