added my courses page

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -11,6 +11,7 @@
   "commandCareerMurat": "",
   "cookiePolicy": "Cookie policy",
   "courses": "",
+  "continueCourse": "",
   "enter": "",
   "feedbacksAuthor1": "",
   "feedbacksRegion1": "",
@@ -35,17 +36,21 @@
   "mainPromoTitle": "",
   "menu": "",
   "next": "",
+  "myCourses": "",
   "noAccountSignUp": "",
   "onlyKyrgyzLanguage": "",
   "password": "",
   "privacyPolicy": "Privacy policy",
   "resources": "",
   "runCode": "",
+  "recommendation": "",
   "logIn": "",
   "signUp": "",
   "sponsorsPartnersText": "",
   "sponsorsPartnersTitle": "",
   "start": "",
+  "startLearning": "",
+  "selectCourse": "",
   "whatCodeText": "",
   "whatCodeTitle": "",
   "withSocialMedias": "",
