--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -12,6 +12,7 @@
   "cookiePolicy": "Куки саясаты",
   "courses": "Курстар",
   "coursesDescription": "Курстар 100% кыргызча жазылган",
+  "continueCourse": "Курсту улантуу",
   "easy": "Оңой",
   "enter": "Кирүү",
   "feedbacksAuthor1": "Уланбек",
@@ -36,6 +37,7 @@
   "mainPage": "Башкы бет",
   "mainPromoTitle": "Программалоо негиздерин браузериңизден чыкпай үйрөнүңүз!",
   "menu": "Меню",
+  "myCourses": "Менин курстарым",
   "lesson": "сабак",
   "next": "Кийинки",
   "noAccountSignUp": "Аккаунтуңуз жокпу? <textPrimary>Жазылыңыз</textPrimary>",
@@ -46,11 +48,14 @@
   "resoursesDescription": "Бул жерде жакын арада пайдалуу ресурстарга шилтемелер болот",
   "runCode": "Код жүргүзүү",
   "logIn": "Кирүү",
+  "recommendation": "Сизге сунуш",
   "signUp": "Аккаунт түзүү",
   "sponsorPartnersText": "Бул маалыматтык баракча жарым-жартылай АКШ өкмөтү каржылаган Бүтүрүүчүлѳрдүн чакан гранттар программасынын каражатына даярдалган. Аталган Чакан гранттар программасы Кыргыз Республикасындагы АКШ Элчилиги тарабынан каржыланып, Американын эл аралык билим берүү кеңештери (АКСЕЛС) аркылуу ишке ашырылат. Бул жерде келтирилген сунуштар, корутундулар жана пикирлер авторлордун оюн гана билдирет жана Кыргыз Республикасы АКШ Элчилигинин же Американын эл аралык билим берүү кеңештеринин көз карашына дал келбеши мүмкүн.",
   "sponsorsPartnersTitle": "Демөөрчүлөр жана өнөктөштөр",
   "start": "Баштадык!",
+  "startLearning": "Окуп баштоо",
   "soon": "Жакында",
+  "selectCourse": "Курс тандоо",
   "whatCodeText": "Kodjaz бул дүйнө жүзүндө популярдуу болгон тилдерди жана технологияларда браузерден чыкпастан үйрөнүү мүмкүнчүлүгүн тартуулаган билим берүү платформасы.",
   "whatCodeTitle": "<kodjaz>Kodjaz</kodjaz> деген эмне?",
   "withSocialMedias": "Соцтармактар аркулуу киирүү:",
