Added IDE with footer and header without responsive, refactore code in Login, Signin components

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -7,6 +7,7 @@
   "aboutPlatformText2": "",
   "aboutPlatformTitle": "",
   "agreePrivacy": "",
+  "back": "",
   "commandCareerMurat": "",
   "cookiePolicy": "Cookie policy",
   "courses": "",
@@ -30,12 +31,16 @@
   "infoMainItemTitle3": "",
   "infoMainItemTitle4": "",
   "kodjazTitle": "",
+  "mainPage": "т",
   "mainPromoTitle": "",
+  "menu": "",
+  "next": "",
   "noAccountSignUp": "",
   "onlyKyrgyzLanguage": "",
   "password": "",
   "privacyPolicy": "Privacy policy",
   "resources": "",
+  "runCode": "",
   "logIn": "",
   "signIn": "",
   "sponsorsPartnersText": "",
