--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -7,6 +7,7 @@
   "aboutPlatformText2": "<text1>Бирөөдөн көз каранды болбой, өзүнчө иш алып баралы деп,2015-жылы ушул долбоорду түптөп койгон элем. Кол тийбегендиктен долбоор кароосуз калып, 2019-жылы пандемия учурунда бир ай бою 1 күндө 1 сааттан код жазуу челленжин жарыялап, курс куруучу кабинетин жасадым.</text1><text2>2022-жылы өзүм 4 жыл иштеген B12 компаниясында кыскартуулар болуп, жумушсуз калгандыктан, долбоорду кайрадан эрмектеп баштадым. Кесипкөй адамдарды тартып, долбоорду codecademy.com'дон кем эмес деңгээлге чыгарып, элге тартуулайын деген максат менен USG Alumni Small Grants конкурсуна катышып, жеңүүчүлөрдүн катарына кирдим.</text2>",
   "aboutPlatformTitle": "Платформанын келип чыгышы",
   "agreePrivacy": "Катталуу менен мен Kodjaz'дын <textLink>Кызмат көрсөтүү саясаты</textLink> жана <textLink>Купуялык саясаты</textLink> менен макулмун деп белгилейм.",
+  "back": "Артка",
   "commandCareerMurat": "Долбоордун түптөөчүсү",
   "cookiePolicy": "Куки саясаты",
   "courses": "Курстар",
@@ -32,14 +33,18 @@
   "infoMainItemTitle3": "Оңой издөө",
   "infoMainItemTitle4": "Акысыз курстар",
   "kodjazTitle": "Kodjaz - программалоо негиздер боюнча акысыз курстар",
+  "mainPage": "Башкы бет",
   "mainPromoTitle": "Программалоо негиздерин браузериңизден чыкпай үйрөнүңүз!",
+  "menu": "Меню",
   "lesson": "сабак",
+  "next": "Кийинки",
   "noAccountSignUp": "Аккаунтуңуз жокпу? <textPrimary>Жазылыңыз</textPrimary>",
   "onlyKyrgyzLanguage": "100% кыргыз тилинде 🇰🇬",
   "password": "Сырсөз",
   "privacyPolicy": "Купуялык саясат",
   "resources": "Ресурстар",
   "resoursesDescription": "Бул жерде жакын арада пайдалуу ресурстарга шилтемелер болот",
+  "runCode": "Код жүргүзүү",
   "logIn": "Кирүү",
   "signIn": "Аккаунт түзүү",
   "sponsorPartnersText": "Бул маалыматтык баракча жарым-жартылай АКШ өкмөтү каржылаган Бүтүрүүчүлѳрдүн чакан гранттар программасынын каражатына даярдалган. Аталган Чакан гранттар программасы Кыргыз Республикасындагы АКШ Элчилиги тарабынан каржыланып, Американын эл аралык билим берүү кеңештери (АКСЕЛС) аркылуу ишке ашырылат. Бул жерде келтирилген сунуштар, корутундулар жана пикирлер авторлордун оюн гана билдирет жана Кыргыз Республикасы АКШ Элчилигинин же Американын эл аралык билим берүү кеңештеринин көз карашына дал келбеши мүмкүн.",
