--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -7,6 +7,7 @@
   "aboutPlatformText2": "<text1>Чтобы не зависеть ни от кого, я начал работу над этим проектом в 2015 году. В 2019 году проект был заброшен из-за отсутствия внимания. Во время пандемии я объявил челлендж 1 час в день решать задачи по программированию в течение месяца и создал кабинет по созданию курсов.</text1><text2>В 2022 году я проработал в компании B12 4 года. В связи с увольнениями и безработицей я начал уделять время своему проекту. Чтобы привлечь профессионалов и вывести проект на уровень не ниже codecademy.com, я принял участие в конкурсе малых грантов выпускников USG с целью представить его людям и стал одним из победителей.</text2>",
   "aboutPlatformTitle": "История создания проекта",
   "agreePrivacy": "Регистрируясь, я соглашаюсь с <textLink>Условиями обслуживания</textLink> и <textLink>Политикой конфиденциальности</textLink> Kodjaz.",
+  "back": "Назад",
   "commandCareerMurat": "Основатель проекта",
   "cookiePolicy": "Политика в отношении файлов cookie",
   "courses": "Курсы",
@@ -31,12 +32,16 @@
   "infoMainItemTitle3": "Удобный поиск",
   "infoMainItemTitle4": "Бесплатные курсы",
   "kodjazTitle": "Kodjaz - бесплатные курсы по основам программирования",
+  "mainPage": "Главная",
   "mainPromoTitle": "Учиться основам программирования, не выходя из дома!",
+  "menu": "Меню",
+  "next": "Следующий",
   "noAccountSignUp": "Нет аккаунта? <textPrimary>Зарегистрируйтесь</textPrimary>",
   "onlyKyrgyzLanguage": "100% на кыргызском языке 🇰🇬",
   "password": "Пароль",
   "privacyPolicy": "Политика конфиденциальности",
   "resources": "Ресурсы",
+  "runCode": "Запустить код",
   "logIn": "Вход",
   "signIn": "Зарегистрироваться",
   "sponsorsPartnersText": "Этот информационный бюллетень был подготовлен частично при финансовой поддержке Программы малых грантов для выпускников правительства США. Программа малых грантов финансируется посольством США в Кыргызской Республике и реализуется через Американский совет по международному образованию (ACCELS). Рекомендации, выводы и мнения, представленные здесь, представляют собой только мнение авторов и могут не отражать точку зрения Посольства США в Кыргызской Республике или Американских советов по международному образованию.",
